# Stella

./: .env.example  .gitignore  bot.dockerfile  docker-compose.yaml  entrypoint.sh  pyproject.toml  web.dockerfile
bot/: main.py
bot/handlers/: routing.py  start.py
bot/keyboards/: inline.py  reply.py
bot/middlewares/: throttling.py
bot/schemas/: telegram_user.py
bot/utils/: bot.py  pagination.py
nginx/servers/: site.conf
web/apps/subscriptions/: apps.py  models.py  urls.py
web/apps/telegram_users/: apps.py  models.py
web/core/: asgi.py  settings.py  wsgi.py
web/db/: base_manager.py  model_mixins.py
